--- a/app/src/main/res/layout/activity_first_bio1.xml
+++ b/app/src/main/res/layout/activity_first_bio1.xml
@@ -11,11 +11,10 @@
         android:id="@+id/textView"
         android:layout_width="316dp"
         android:layout_height="93dp"
-        android:text="welcome!!"
-        android:textSize="60dp"
+        android:text="swag gate hey"
+        android:textSize="40dp"
         android:gravity="center"
         android:textColor="@color/white"
-        android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
